--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Trang chủ</title>
-</head>
-<body>
-    <h1>Hello world</h1>
+{% extends 'layout/base.html' %}
 
-</body>
-</html>
+{% block title %}Trang Chủ{% endblock %}
+
+{% block content %}
+<h1>Trang chủ</h1>
+
+{% endblock %}
