--- a/app/templates/layout/base.html
+++ b/app/templates/layout/base.html
@@ -2,9 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>
+        {% block title %}{% endblock %}
+    </title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://png.pngtree.com/png-clipart/20190630/original/pngtree-vector-five-star-hotel-icon-png-image_4173634.jpg">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://png.pngtree.com/png-clipart/20190630/original/pngtree-vector-five-star-hotel-icon-png-image_4173634.jpg">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://png.pngtree.com/png-clipart/20190630/original/pngtree-vector-five-star-hotel-icon-png-image_4173634.jpg">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    {% block js %}{% endblock %}
+    {% block css %}{% endblock %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
 </head>
 <body>
+{% block header %}
+    {% include 'layout/header.html' %}
+{% endblock %}
+
+
+{% block content %}
+{% endblock %}
+
+
+{% block footer %}
+    {% include 'layout/footer.html' %}
+{% endblock %}
 
 </body>
 </html>
