--- a/app/templates/layout/footer.html
+++ b/app/templates/layout/footer.html
@@ -1,10 +1,81 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<div class="bg-light">
+    <div class="container">
+        <div class=" p-2 d-flex flex-wrap flex-md-wrap flex-sm-wrap flex-lg-wrap flex-xl-wrap justify-content-between ">
+            <div>
+                <div class="p-2 m-2">
+                    <div class="d-flex flex-column">
+                        <h5>Hỗ Trợ</h5>
+                        <a><span>Quản lý khách sạn</span></a>
+                        <a><span>Liên hệ dịch vụ Khách Hàng</span></a>
+                        <a><span>Trung Tâm thông tin bảo mật</span></a>
+                        <a><span>Hỗ trợ khách hàng</span></a>
+                    </div>
+                </div>
+            </div>
 
-</body>
-</html>
+            <div>
+                <div class="p-2">
+                    <div class="d-flex flex-column">
+                        <h5>Khám Phá thêm</h5>
+                        <a><span>Chương trình mùa tết</span></a>
+                        <a><span>Ưu đãi dịp lễ </span></a>
+                        <a><span>Bài viết về Du lịch</span></a>
+                        <a><span>Du lịch cho doanh nghiệp</span></a>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="p-2">
+                    <div class="d-flex flex-column">
+                        <h5>Điều khoản và bảo mật</h5>
+                        <a><span>Bảo mật & cookie</span></a>
+                        <a><span>Điều khoản và điều kiện</span></a>
+                        <a><span>Chính sách về quyền con người</span></a>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="p-2">
+                    <div class="d-flex flex-column">
+                        <h5>Về Chúng Tôi</h5>
+                        <a><span>Về khách sạn Oasia</span></a>
+                        <a><span>Chúng tôi hoạt động như thế nào</span></a>
+                        <a><span>Du lịch </span></a>
+                        <a><span>Cơ hội việc làm </span></a>
+                        <a><span>Liên hệ công ty</span></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="d-flex justify-content-start m-2 align-items-center">
+             <div class="me-5">
+                <img src="https://t-cf.bstatic.com/design-assets/assets/v3.138.1/images-flags/Vn@3x.png"
+                     width="35" class="rounded-circle"/>
+            </div>
+             <div>
+                <h5>VND</h5>
+            </div>
+        </div>
+
+        <hr/>
+
+        <div class="d-flex align-items-center  justify-content-between flex-column p-2 mb-2">
+            <div class="text-footer">
+                Oasia là Tập đoàn của Holdings Inc., tập đoàn đứng đầu thế giới về du lịch trực tuyến và các dịch vụ liên quan.
+            </div>
+            <div class="text-footer">
+                Bản quyền © 1996 - 2024 Oasia.com™. Bảo lưu mọi quyền.
+            </div>
+        </div>
+        <div>
+            <div class="d-flex justify-content-around">
+                <i class="fa-solid fa-b booking">  Booking</i>
+                <i class="fa-brands fa-facebook face">  Facebook</i>
+                <i class="fa-brands fa-x-twitter twitter">  Twitter</i>
+                <i class="fa-brands fa-square-instagram instagram">  Instagram</i>
+            </div>
+        </div>
+
+
+    </div>
+</div>
