--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,5 +4,60 @@
 
 {% block content %}
 <h1>Trang chủ</h1>
+<!--w3school => Carousel -->
+<div id="demo" class="carousel slide" data-bs-ride="carousel">
 
+    <!-- Indicators/dots -->
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+      <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+      <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+    </div>
+  
+    <!-- The slideshow/carousel -->
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="https://res.cloudinary.com/dxxwcby8l/image/upload/v1691062682/tkeflqgroeil781yplxt.jpg" alt="Los Angeles" class="d-block w-100">
+        <div class="carousel-caption">
+            <h3>Los Angeles</h3>
+            <p>We had such a great time in 1!</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="https://res.cloudinary.com/dxxwcby8l/image/upload/v1691062682/tkeflqgroeil781yplxt.jpg" alt="Chicago" class="d-block w-100">
+        <div class="carousel-caption">
+            <h3>Los Angeles</h3>
+            <p>We had such a great time in 2!</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="https://res.cloudinary.com/dxxwcby8l/image/upload/v1691062682/tkeflqgroeil781yplxt.jpg" alt="New York" class="d-block w-100">
+        <div class="carousel-caption">
+            <h3>Los Angeles</h3>
+            <p>We had such a great time in 3!</p>
+        </div>
+      </div>
+    </div>
+  
+    <!-- Left and right controls/icons -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+      <span class="carousel-control-next-icon"></span>
+    </button>
+</div>
+<!--w3school end Carousel -->
+
+<!-- thanh tìm kiếm -->
+<div class="container mt-5">
+  <div class="row justify-content-center">
+      <div class="col-md-6">
+          <form class="form-inline">
+              <input class="form-control mr-sm-2" type="search" placeholder="Tìm kiếm..." aria-label="Search">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Tìm kiếm</button>
+          </form>
+      </div>
+  </div>
+</div>
 {% endblock %}
