--- a/app/templates/layout/header.html
+++ b/app/templates/layout/header.html
@@ -19,6 +19,9 @@
           <a class="nav-link disabled" aria-disabled="true">Disabled</a>
         </li>
       </ul>
+      <a href="#"><button type="button" class="btn btn-outline-light text-dark">Support</button></a>
+      <a href="#"><button type="button" class="btn btn-outline-light text-dark">Work with us</button></a>
+      <a href="#"><button type="button" class="btn btn-outline-light text-dark">My Reservations</button></a>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
