--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,16 @@
 {% extends 'layout/base.html' %}
 
+{% block js %}
+<script src="{{ url_for('static', filename='js/calculateNights.js') }}"></script>
+{% endblock %}
+
 {% block title %}Trang Chủ{% endblock %}
 
+
 {% block content %}
+
 <h1>Trang chủ</h1>
+
 <!--w3school => Carousel -->
 <div id="demo" class="carousel slide" data-bs-ride="carousel">
 
@@ -51,14 +58,74 @@
 
 <!-- thanh tìm kiếm -->
 <div class="container mt-5">
-  <div class="row justify-content-center">
-      <div class="col-md-6">
-          <form class="form-inline">
-              
-              <input class="form-control mr-sm-2" type="search" placeholder="Tìm kiếm..." aria-label="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Tìm kiếm</button>
-          </form>
+  <form>
+      <div class="dropdown mb-2">
+        <label for="location-dropdown" class="form-label">City, location or hotel name:</label>
+        
+        <input
+          id="location-dropdown"
+          type="text"
+          class="form-control dropdown-toggle"
+          placeholder="Thành phố, khách sạn, điểm đến"
+          data-bs-toggle="dropdown"
+          aria-expanded="false"
+        />
+        <ul class="dropdown-menu w-100">
+          <!-- phần này để đổ dữ liệu từ database vào -->
+          <li><a class="dropdown-item" href="#">Quận 1</a></li>
+          <li><a class="dropdown-item" href="#">Đà Nẵng</a></li>
+          <li><a class="dropdown-item" href="#">Link 3</a></li>
+          <li><a class="dropdown-item" href="#">Thành phố Vũng Tàu</a></li>
+          <li><a class="dropdown-item">Nha Trang</a></li>
+        </ul>
       </div>
-  </div>
+
+      <!-- ngày nhận - ngày trả phòng -->
+      <div class="row">
+          <div class="col-md-2">
+            <label for="checkin-date" class="form-label"><i class="fa-solid fa-calendar" style="color: #23e7d9;"></i> Check-in date:</label>
+            <input type="date" id="checkin-date" class="form-control" />
+          </div>
+
+          <div class="col-md-2">
+          <label class="mb-2"><i class="fa-solid fa-moon" style="color: #FFD43B;"></i> number of nights</label>
+            <select class=" form-select ">
+              <option>1 đêm</option>  
+              <option>2 đêm</option>
+              <option>3 đêm</option>
+              <option>4 đêm</option>
+            </select>
+          </div>
+
+          <div class="col-md-8">
+            <label for="check-out" class="mb-2">Check out</label>
+            <div><label for="check-out-date">Thứ 3, 24 thg 12 2024</label>
+          </div>
+      </div>
+
+      <div class="row mt-3">
+        <div class="col-md-3">
+          <p>Số lượng khách</p>
+          <select class="form-select">
+            <option>2</option>
+            <option>1</option>
+            <option>3</option>
+          </select>
+        </div>
+
+        <div class="col-md-3">
+          <p>Loại phòng</p>
+          <select class="form-select">
+            <option>Normal</option>
+            <option>VIP</option>
+          </select>
+        </div>
+        <div class="col-md-6">
+          <p class="mb-0"></p>
+          <button type="button" class="btn col-md-6 " style="background-color:#ff5e1e; color:antiquewhite"><i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i> Tìm khách sạn</button>
+        </div>
+      </div>
+  </form>
 </div>
+<br><br>
 {% endblock %}
