--- a/app/templates/layout/base.html
+++ b/app/templates/layout/base.html
@@ -14,6 +14,7 @@
     {% block js %}{% endblock %}
     {% block css %}{% endblock %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"></script>
+    <script src="{{ url_for('static', filename='js/checkOutDate.js') }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
