--- a/app/templates/layout/header.html
+++ b/app/templates/layout/header.html
@@ -14,18 +14,43 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Booking</a>
         </li>
-
-        <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+         <li class="nav-item">
+          <a class="nav-link" href="#">Vip</a>
         </li>
+         <li class="nav-item">
+          <a class="nav-link" href="#">Normal</a>
+        </li>
+        {% if current_user.is_authenticated %}
+        <li class="nav-item">
+          <a class="nav-link" href="/">
+            {% if current_user.avatar %}
+            <img src="{{ current_user.avatar }}" width="30" class="rounded-circle" alt="{{ current_user.avatar }}" />
+            {% else %}
+            <img src="https://tse3.mm.bing.net/th?id=OIP.uYtN9PxIa7bdzjlYajELGQHaHP&pid=Api&P=0&h=220" width="30" class="rounded-circle" alt="avatar" />
+            {% endif %}
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link  username" href="/sign-out">{{ current_user.username }}</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/sign-out">Đăng xuất</a>
+        </li>
+        {% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="/register">Đăng kí</a>
+        </li>
+
+         <li class="nav-item">
+          <a class="nav-link" href="/login">Đăng Nhập</a>
+        </li>
+
+        {% endif %}
+
       </ul>
       <a href="#"><button type="button" class="btn btn-outline-light text-dark">Support</button></a>
       <a href="#"><button type="button" class="btn btn-outline-light text-dark">Work with us</button></a>
       <a href="#"><button type="button" class="btn btn-outline-light text-dark">My Reservations</button></a>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
     </div>
   </div>
 </nav>
