--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -158,22 +158,39 @@
 
 <div class="container mt-5">
     <div class="row justify-content-center">
-        <div class="col-md-8">
-            <div class="ticket d-flex align-items-center">
+        <div class="col-md-5 me-5">
+            <div class="ticket align-items-center row">
                 <!-- Phần thông tin khuyến mãi -->
-                <div class="ticket-info flex-grow-1 p-3">
+                <div class="ticket-info flex-grow-1 p-3 col-md-8">
                     <h5 class="fw-bold mb-2">Giảm 8% đặt phòng khách sạn...</h5>
                     <p class="text-muted mb-1">Hạn sử dụng: 01/12 - 28/02</p>
                     <p class="text-muted mb-1">Nhập mã khi thanh toán</p>
                     <a href="#" class="text-danger fw-bold">Điều kiện & thể lệ chương trình</a>
                 </div>
 
-                <!-- Đường kẻ chấm giữa -->
-                <div class="ticket-divider"></div>
+                <!-- Phần mã giảm giá -->
+                <div class="ticket-code p-3 text-center col-md-4">
+                    <p class="fw-bold mb-1">Nhập mã</p>
+                    <p class="fw-bold text-danger mb-2">QTEBIZ</p>
+                    <button class="btn btn-danger btn-sm">Nhận mã</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-5 ms-5">
+            <div class="ticket align-items-center row">
+                <!-- Phần thông tin khuyến mãi -->
+                <div class="ticket-info flex-grow-1 p-3 col-md-8">
+                    <h5 class="fw-bold mb-2">Giảm 5% đặt phòng khách sạn...</h5>
+                    <p class="text-muted mb-1">Hạn sử dụng: 28/08 - 31/12</p>
+                    <p class="text-muted mb-1">Nhập mã khi thanh toán</p>
+                    <a href="#" class="text-danger fw-bold">Điều kiện & thể lệ chương trình</a>
+                </div>
 
                 <!-- Phần mã giảm giá -->
-                <div class="ticket-code p-3 text-center">
-                    <p class="fw-bold text-danger mb-2">QTEBIZ</p>
+                <div class="ticket-code p-3 text-center col-md-4">
+                    <p class="fw-bold mb-1">Nhập mã</p>
+                    <p class="fw-bold text-danger mb-2">QTE5</p>
                     <button class="btn btn-danger btn-sm">Nhận mã</button>
                 </div>
             </div>
