--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -162,7 +162,7 @@
             <div class="ticket align-items-center row">
                 <!-- Phần thông tin khuyến mãi -->
                 <div class="ticket-info flex-grow-1 p-3 col-md-8">
-                    <h5 class="fw-bold mb-2">Giảm 8% đặt phòng khách sạn...</h5>
+                    <h5 class="fw-bold mb-2 .text-truncate">Giảm 8% đặt phòng khách sạn cho khách hàng Doanh nghiệp</h5>
                     <p class="text-muted mb-1">Hạn sử dụng: 01/12 - 28/02</p>
                     <p class="text-muted mb-1">Nhập mã khi thanh toán</p>
                     <a href="#" class="text-danger fw-bold">Điều kiện & thể lệ chương trình</a>
@@ -181,7 +181,7 @@
             <div class="ticket align-items-center row">
                 <!-- Phần thông tin khuyến mãi -->
                 <div class="ticket-info flex-grow-1 p-3 col-md-8">
-                    <h5 class="fw-bold mb-2">Giảm 5% đặt phòng khách sạn...</h5>
+                    <h5 class="fw-bold mb-2 text-truncate">Giảm 5% đặt phòng khách sạn khi đặt trên 3 phòng</h5>
                     <p class="text-muted mb-1">Hạn sử dụng: 28/08 - 31/12</p>
                     <p class="text-muted mb-1">Nhập mã khi thanh toán</p>
                     <a href="#" class="text-danger fw-bold">Điều kiện & thể lệ chương trình</a>
