--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -158,21 +158,69 @@
 
 <div class="container mt-5">
     <div class="row justify-content-center">
+
         <div class="col-md-5 me-5">
             <div class="ticket align-items-center row">
                 <!-- Phần thông tin khuyến mãi -->
                 <div class="ticket-info flex-grow-1 p-3 col-md-8">
-                    <h5 class="fw-bold mb-2 .text-truncate">Giảm 8% đặt phòng khách sạn cho khách hàng Doanh nghiệp</h5>
+                    <h5 class="fw-bold mb-2 text-truncate"
+                        data-bs-toggle="modal"
+                        data-bs-target="#moreTicket1">Giảm
+                        8% đặt phòng
+                        khách sạn cho khách hàng Doanh nghiệp</h5>
                     <p class="text-muted mb-1">Hạn sử dụng: 01/12 - 28/02</p>
                     <p class="text-muted mb-1">Nhập mã khi thanh toán</p>
-                    <a href="#" class="text-danger fw-bold">Điều kiện & thể lệ chương trình</a>
+                    <a href="#" class="text-danger fw-bold"
+                        data-bs-toggle="modal" data-bs-target="#moreTicket1">
+                        Điều kiện & thể lệ chương trình
+                    </a>
+                </div>
+
+                <!-- Modal -->
+                <!-- The Modal -->
+                <div class="modal" id="moreTicket1">
+                    <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-content">
+
+                            <!-- Modal Header -->
+                            <div class="modal-header">
+                                <h4 class="modal-title">Điều kiện & thể lệ
+                                    chương trình</h4>
+                                <button type="button" class="btn-close"
+                                    data-bs-dismiss="modal"></button>
+                            </div>
+
+                            <!-- Modal body -->
+                            <div class="modal-body">
+                                <ul>
+                                    <li>Giảm ngay 8% (tối đa 3.000.000₫) cho đặt
+                                        phòng khách sạn cho khách hàng Doanh
+                                        nghiệp. (mức giảm áp dụng cho giá trị
+                                        đơn chưa bao gồm thuế phí).</li>
+                                    <li>Ưu đãi được áp dụng cho một số hạng
+                                        phòng của khách sạn.</li>
+                                    <li>Mỗi khách hàng chỉ được hưởng ưu đãi 01
+                                        lần/ chương trình.</li>
+                                    <li>Nếu phát hiện các đặt phòng có dấu hiệu
+                                        lạm dụng, trục lợi ưu đãi, Oasia có
+                                        quyền từ chối áp dụng.</li>
+                                    <li>Áp dụng hoàn hủy theo chính sách khách
+                                        sạn.</li>
+                                    <li>Mọi thắc mắc vui lòng liên hệ hotline
+                                        của Oasia.</li>
+                                    <!-- Thêm nội dung khác -->
+                                </ul>
+                            </div>
+
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Phần mã giảm giá -->
                 <div class="ticket-code p-3 text-center col-md-4">
                     <p class="fw-bold mb-1">Nhập mã</p>
                     <p class="fw-bold text-danger mb-2">QTEBIZ</p>
-                    <button class="btn btn-danger btn-sm">Nhận mã</button>
+                    <button class="btn btn-sm">Nhận mã</button>
                 </div>
             </div>
         </div>
@@ -181,21 +229,68 @@
             <div class="ticket align-items-center row">
                 <!-- Phần thông tin khuyến mãi -->
                 <div class="ticket-info flex-grow-1 p-3 col-md-8">
-                    <h5 class="fw-bold mb-2 text-truncate">Giảm 5% đặt phòng khách sạn khi đặt trên 3 phòng</h5>
+                    <h5 class="fw-bold mb-2 text-truncate"
+                        data-bs-toggle="modal"
+                        data-bs-target="#moreTicket2">Giảm 5% đặt phòng
+                        khách sạn khi đặt trên 3 phòng</h5>
                     <p class="text-muted mb-1">Hạn sử dụng: 28/08 - 31/12</p>
                     <p class="text-muted mb-1">Nhập mã khi thanh toán</p>
-                    <a href="#" class="text-danger fw-bold">Điều kiện & thể lệ chương trình</a>
+                    <a href="#" class="text-danger fw-bold"
+                        data-bs-toggle="modal"
+                        data-bs-target="#moreTicket2">Điều kiện & thể lệ
+                        chương trình</a>
+                </div>
+
+                <!-- Modal -->
+                <!-- The Modal -->
+                <div class="modal" id="moreTicket2">
+                    <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-content">
+
+                            <!-- Modal Header -->
+                            <div class="modal-header">
+                                <h4 class="modal-title">Điều kiện & thể lệ
+                                    chương trình</h4>
+                                <button type="button" class="btn-close"
+                                    data-bs-dismiss="modal"></button>
+                            </div>
+
+                            <!-- Modal body -->
+                            <div class="modal-body">
+                                <ul>
+                                    <li>Giảm ngay 5% tối đa 1.000.000Đ cho đơn
+                                        phòng khách sạn khi đặt trên 3 phòng
+                                        (mức giảm áp dụng cho giá trị đơn chưa
+                                        bao gồm thuế phí).</li>
+                                    <li>Ưu đãi được áp dụng cho một số hạng
+                                        phòng của khách sạn.</li>
+                                    <li>Mỗi khách hàng chỉ được hưởng ưu đãi 01
+                                        lần/ chương trình.</li>
+                                    <li>Nếu phát hiện các đặt phòng có dấu hiệu
+                                        lạm dụng, trục lợi ưu đãi, Oasia có
+                                        quyền từ chối áp dụng.</li>
+                                    <li>Áp dụng hoàn hủy theo chính sách khách
+                                        sạn.</li>
+                                    <li>Mọi thắc mắc vui lòng liên hệ hotline
+                                        của Oasia.</li>
+                                    <!-- Thêm nội dung khác -->
+                                </ul>
+                            </div>
+
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Phần mã giảm giá -->
                 <div class="ticket-code p-3 text-center col-md-4">
                     <p class="fw-bold mb-1">Nhập mã</p>
                     <p class="fw-bold text-danger mb-2">QTE5</p>
-                    <button class="btn btn-danger btn-sm">Nhận mã</button>
+                    <button class="btn btn-sm">Nhận mã</button>
                 </div>
             </div>
         </div>
     </div>
+    
 </div>
 <br><br>
 {% endblock %}
