--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,6 +2,12 @@
 
 {% block title %}Trang Chủ{% endblock %}
 
+{% block js %}
+<script src="{{ url_for('static', filename='js/checkOutDate.js') }}"></script>
+<script src="{{ url_for('static', filename='js/countTicket.js') }}"></script>
+<script src="{{ url_for('static', filename='js/countdown.js') }}"></script>
+{% endblock %}
+
 {% block content %}
 
 <h1>Trang chủ</h1>
@@ -298,10 +304,14 @@
 <!-- end Phần khuyến mãi -->
 
 <!-- Phần flask sale -->
+
 <div class="container mt-5">
     <div class="row " style="justify-content: space-between">
         <div class="col-md-5">
-            <img src="../resources/images/flashSale.png" alt="flashSale">
+            <img
+                src="https://res.cloudinary.com/devtqlbho/image/upload/v1733149336/flashSale_s6l52q.png"
+                alt="flashSale"
+                class="img-responsive">
             <div class="row">
                 <p class="col-md-6">Chương trình sẽ kết thúc trong</p>
                 <p class="col-md-6 timer" id="countdown"></p>
@@ -319,47 +329,105 @@
         </div>
     </div>
 
-    <!-- Carousel -->
-    <div class="mt-5 container">
-        <div id="flaskSale" class="carousel slide" data-bs-ride="carousel">
+    <div class="row mt-3" style="height: 400px; justify-content: space-around;">
 
-            <!-- Indicators/dots -->
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#flaskSale"
-                    data-bs-slide-to="0"
-                    class="active"></button>
-                <button type="button" data-bs-target="#flaskSale"
-                    data-bs-slide-to="1"></button>
-                <button type="button" data-bs-target="#flaskSale"
-                    data-bs-slide-to="2"></button>
-            </div>
-
-            <!-- The slideshow/carousel -->
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="la.jpg" alt="Los Angeles" class="d-block w-100">
+        <div class="card col-md-3 col-6 p-0" style="width:300px">
+            <img class="card-img-top"
+                src="https://res.cloudinary.com/devtqlbho/image/upload/v1733131040/4_av2wxh.jpg"
+                alt="Card image">
+            <div class="card-body">
+                <h4 class="card-title">Khách sạn </h4>
+                <p class="mb-1">
+                    {% for i in range(1, 4) %}
+                    <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+                    {% endfor %}
+                </p>
+                <p class="card-text mb-0">Loại phòng: VIP</p>
+                <div>
+                    <span style="background-color: #feebef; color: #f43a6b; border-radius: 5    px;"><i class="fa-solid fa-umbrella" style="color: #09d396;"></i> 9.2</span>
+                    <span>Tuyệt vời</span>
+                    <span>(255 đánh giá)</span>
                 </div>
-                <div class="carousel-item">
-                    <img src="chicago.jpg" alt="Chicago" class="d-block w-100">
-                </div>
-                <div class="carousel-item">
-                    <img src="ny.jpg" alt="New York" class="d-block w-100">
+                <div style="display: flex; flex-direction: column; align-items: flex-end;">
+                    <span style=" text-decoration: line-through;">1,000,000 đ</span>
+                    <span style="color: rgb(229, 62, 62); font-size: 24px;" >700,000 đ</span>
                 </div>
             </div>
+        </div>
 
-            <!-- Left and right controls/icons -->
-            <button class="carousel-control-prev" type="button"
-                data-bs-target="#flaskSale" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon"></span>
-            </button>
-            <button class="carousel-control-next" type="button"
-                data-bs-target="#flaskSale" data-bs-slide="next">
-                <span class="carousel-control-next-icon"></span>
-            </button>
+        <div class="card col-md-3 col-6 p-0" style="width:300px">
+            <img class="card-img-top"
+                src="https://res.cloudinary.com/devtqlbho/image/upload/v1733131040/4_av2wxh.jpg"
+                alt="Card image">
+            <div class="card-body">
+                <h4 class="card-title">Khách sạn </h4>
+                <p class="mb-1">
+                    {% for i in range(1, 4) %}
+                    <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+                    {% endfor %}
+                </p>
+                <p class="card-text mb-0">Loại phòng: VIP</p>
+                <div>
+                    <span style="background-color: #feebef; color: #f43a6b; border-radius: 5    px;"><i class="fa-solid fa-umbrella" style="color: #09d396;"></i> 9.2</span>
+                    <span>Tuyệt vời</span>
+                    <span>(255 đánh giá)</span>
+                </div>
+                <div style="display: flex; flex-direction: column; align-items: flex-end;">
+                    <span style=" text-decoration: line-through;">1,000,000 đ</span>
+                    <span style="color: rgb(229, 62, 62); font-size: 24px;" >700,000 đ</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="card col-md-3 col-6 p-0" style="width:300px">
+            <img class="card-img-top"
+                src="https://res.cloudinary.com/devtqlbho/image/upload/v1733131040/4_av2wxh.jpg"
+                alt="Card image">
+            <div class="card-body">
+                <h4 class="card-title">Khách sạn </h4>
+                <p class="mb-1">
+                    {% for i in range(1, 4) %}
+                    <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+                    {% endfor %}
+                </p>
+                <p class="card-text mb-0">Loại phòng: VIP</p>
+                <div>
+                    <span style="background-color: #feebef; color: #f43a6b; border-radius: 5    px;"><i class="fa-solid fa-umbrella" style="color: #09d396;"></i> 9.2</span>
+                    <span>Tuyệt vời</span>
+                    <span>(255 đánh giá)</span>
+                </div>
+                <div style="display: flex; flex-direction: column; align-items: flex-end;">
+                    <span style=" text-decoration: line-through;">1,000,000 đ</span>
+                    <span style="color: rgb(229, 62, 62); font-size: 24px;" >700,000 đ</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="card col-md-3 col-6 p-0" style="width:300px">
+            <img class="card-img-top"
+                src="https://res.cloudinary.com/devtqlbho/image/upload/v1733131040/4_av2wxh.jpg"
+                alt="Card image">
+            <div class="card-body">
+                <h4 class="card-title">Khách sạn </h4>
+                <p class="mb-1">
+                    {% for i in range(1, 4) %}
+                    <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+                    {% endfor %}
+                </p>
+                <p class="card-text mb-0">Loại phòng: VIP</p>
+                <div>
+                    <span style="background-color: #feebef; color: #f43a6b; border-radius: 5    px;"><i class="fa-solid fa-umbrella" style="color: #09d396;"></i> 9.2</span>
+                    <span>Tuyệt vời</span>
+                    <span>(255 đánh giá)</span>
+                </div>
+                <div style="display: flex; flex-direction: column; align-items: flex-end;">
+                    <span style=" text-decoration: line-through;">1,000,000 đ</span>
+                    <span style="color: rgb(229, 62, 62); font-size: 24px;" >700,000 đ</span>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-
 
 <br><br>
 {% endblock %}
