--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -198,4 +198,7 @@
     </div>
 </div>
 <br><br>
+{% block js %}
+<script src="{{ url_for('static', filename='js/checkOutDate.js') }}"></script>
+{% endblock %}
 {% endblock %}
