--- a/app/templates/layout/base.html
+++ b/app/templates/layout/base.html
@@ -13,11 +13,11 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     {% block js %}{% endblock %}
     {% block css %}{% endblock %}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"></script>
-    <script src="{{ url_for('static', filename='js/checkOutDate.js') }}"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
+    
 {% block header %}
     {% include 'layout/header.html' %}
 {% endblock %}
