--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -306,7 +306,7 @@
 
 <!-- Phần flask sale -->
 
-<div class="container mt-5">
+<div class=" mt-5 mb-5 bg p-4" style="background-color: #fff5f6;">
     <div class="row " style="justify-content: space-between">
         <div class="col-md-5">
             <img
@@ -320,7 +320,9 @@
         </div>
         <div class="col-md-3">
             <div class="container">
-                <div class="box-flasksale-right" ><ul style="list-style-type: none; text-align: center;" class="p-0 mb-0">
+                <div class="box-flasksale-right"><ul
+                        style="list-style-type: none; text-align: center;"
+                        class="p-0 mb-0">
                         <li>kết thúc ngày 30/12/2024</li>
                         <li>lúc 00:00:00 </li>
                         <li>Đang diễn ra <i class="fa-solid fa-fire fa-shake"
@@ -459,5 +461,39 @@
     </div>
 </div>
 
+<!-- gửi thông tin khuyến mãi -->
+<div class=" container mt-5" style="background-color: #09d396;">
+    <div class="row">
+        <div class="col-md-7" style="background-color: #B197FC;">
+            <div class="row">
+                <div class="col-md-4">
+                    <img
+                        src="https://res.cloudinary.com/devtqlbho/image/upload/v1733156440/3_qjevsp.jpg"
+                        alt="Los Angeles" class="d-block w-100">
+                </div>
+
+                <div class="col-md-8">
+                    <ul>
+                        <li>Bạn muốn tiết kiệm tới 50% khi đặt phòng khách sạn ?</li>
+                        <li>Nhập số điện thoại để Oasia có thể gửi đến bạn những chương trình khuyến mại mới nhất!</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-5" style=" background-color: #f79a18;">
+            <div class="m-5" style="background-color: #63E6BE;">
+                <form action="post" class="row">
+                    <div class="col-md-8">
+                        <input type="text" placeholder="Nhập số điện thoại">
+                    </div>
+                    <div class="col-md-4">
+                        <button type="submit" class="btn">Đăng ký</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 <br><br>
 {% endblock %}
