--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -38,7 +38,7 @@
         </div>
         <div class="carousel-item">
             <img
-                src="https://res.cloudinary.com/devtqlbho/image/upload/v1733156440/8_nslfrl.webp"
+                src="https://res.cloudinary.com/devtqlbho/image/upload/v1733406947/9_gtkici.jpg"
                 alt="Chicago" class="d-block w-100">
             <div class="carousel-caption">
                 <h3 class="mb-0">Oasia Hotel</h3>
@@ -333,7 +333,8 @@
         </div>
     </div>
 
-    <div class="row mt-3" style="height: 400px; justify-content: space-around;">
+    <div class="row mt-3 container"
+        style="height: 400px; justify-content: space-around; margin: 0 auto;">
 
         <div class="card col-md-3 col-6 p-0" style="width:300px">
             <img class="card-img-top"
@@ -460,35 +461,95 @@
         </div>
     </div>
 </div>
+<!-- end Phần flask sale -->
+
+<!-- giới thiệu người sáng lập -->
+<div class="container row mx-auto" >
+    <div  class="col-md-3">
+        <div class="container">
+            <div class="card person_card" >
+                <img class="card-img-top person_image mx-auto rounded-circle mt-5" src="https://res.cloudinary.com/devtqlbho/image/upload/v1733410262/Ton-Nu-Tuong-Van-scaled-e1647176931557_j66ova.jpg" alt="tôn nữ tường vân">
+                <div class="card-body">
+                    <h4 class="card-title text-center">Tôn Nữ Tường Vân</h4>
+                    <p class="card-text text-center">"Fall where you stand up there."</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <div  class="col-md-3">
+        <div class="container">
+            <div class="card person_card" >
+                <img class="card-img-top person_image mx-auto rounded-circle mt-5" src="https://res.cloudinary.com/devtqlbho/image/upload/v1733410262/Phan-Tu%CC%81-Quye%CC%82n_Microsoft1-scaled-e1647176811363_ighsg1.jpg" alt="Phan Tú Quyên">
+                <div class="card-body">
+                    <h4 class="card-title text-center">Phan Tú Quyên</h4>
+                    <p class="card-text text-center">“I am talented, so are you.”</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <div  class="col-md-3">
+        <div class="container">
+            <div class="card person_card" >
+                <img class="card-img-top person_image mx-auto rounded-circle mt-5" src="https://res.cloudinary.com/devtqlbho/image/upload/v1733410262/Nguyen-Ngo-Vi-Tam_VHC-1024x1536_st3tv2.jpg" alt="Nguyễn Ngô Vi Tâm">
+                <div class="card-body">
+                    <h4 class="card-title text-center">Nguyễn Ngô Vi Tâm</h4>
+                    <p class="card-text text-center">“Get up from where you fell”</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <div  class="col-md-3">
+        <div class="container">
+            <div class="card person_card" >
+                <img class="card-img-top person_image mx-auto rounded-circle mt-5" src="https://res.cloudinary.com/devtqlbho/image/upload/v1733412792/HUY%CC%80NH-THI%CC%A3-XUA%CC%82N-LIE%CC%82N-1025x1536_jrkkol.jpg" alt="Huỳnh Thị Xuân Liên">
+                <div class="card-body">
+                    <h4 class="card-title text-center">Huỳnh Thị Xuân Liên</h4>
+                    <p class="card-text text-center">“Take action instead of making empty promises”</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!--end giới thiệu người sáng lập -->
 
 <!-- gửi thông tin khuyến mãi -->
-<div class=" container mt-5" style="background-color: #09d396;">
-    <div class="row">
-        <div class="col-md-7" style="background-color: #B197FC;">
-            <div class="row">
-                <div class="col-md-4">
-                    <img
-                        src="https://res.cloudinary.com/devtqlbho/image/upload/v1733156440/3_qjevsp.jpg"
-                        alt="Los Angeles" class="d-block w-100">
-                </div>
+<div class=" container mt-5">
+    <div class="row promotion">
+        <div class="col-md-7">
+            <div class="mt-3">
+                <div class="row ">
+                    <div class="col-md-2">
+                        <img
+                            src="https://res.cloudinary.com/devtqlbho/image/upload/v1733405475/google_mail_gmail_logo_icon_159346_zdefac.png"
+                            alt="Los Angeles" class="d-block"
+                            style="width: 100%;">
+                    </div>
 
-                <div class="col-md-8">
-                    <ul>
-                        <li>Bạn muốn tiết kiệm tới 50% khi đặt phòng khách sạn ?</li>
-                        <li>Nhập số điện thoại để Oasia có thể gửi đến bạn những chương trình khuyến mại mới nhất!</li>
-                    </ul>
+                    <div class="col-md-8 mt-3 ">
+                        <ul style="list-style-type: none;">
+                            <li>Bạn muốn tiết kiệm tới 50% khi đặt phòng khách
+                                sạn ?</li>
+                            <li>Nhập số điện thoại để Oasia có thể gửi đến bạn
+                                những chương trình khuyến mại mới nhất!</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
 
-        <div class="col-md-5" style=" background-color: #f79a18;">
-            <div class="m-5" style="background-color: #63E6BE;">
+        <div class="col-md-5">
+            <div class="m-5">
                 <form action="post" class="row">
-                    <div class="col-md-8">
-                        <input type="text" placeholder="Nhập số điện thoại">
+                    <div class="col-md-8 p-0">
+                        <input type="text" placeholder=" Nhập số điện thoại"
+                            class="promotion1">
                     </div>
-                    <div class="col-md-4">
-                        <button type="submit" class="btn">Đăng ký</button>
+                    <div class="col-md-4 p-0">
+                        <button type="submit" class="btn btn-danger"
+                            style="border-radius: 0 5px 5px 0;">Đăng ký</button>
                     </div>
                 </form>
             </div>
