--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -40,6 +40,11 @@
     font-weight: bold;
     bottom: -30px;
 }
+
+.full-width-height {
+    width: 100%;
+    height: 100%;
+}
 /* kết thúc banner giới thiệu */
 
 /* ===================== */
@@ -118,6 +123,35 @@
     width: 40%; 
     height: auto; 
 }
+
+/* thanh nhập số điện thoại nhận chương trình khuyến mãi */
+div .promotion{
+    border: 2px solid #09d396;
+    border-radius: 5px;
+}
+
+.promotion .promotion1 {
+    border-radius:  5px 0 0 5px;
+    border: none;
+    width: 100%;
+    height: 100%;
+    background-color: #edf2f6;
+}
+/* end thanh nhập số điện thoại nhận chương trình khuyến mãi */
+
+/* phần giới thiệu người sáng lập */
+.person_card {
+    width: 300px;
+    height: 300px;
+}
+
+.person_image {
+    max-width: 40%;
+    height: 50%;
+    display: block;
+
+}
+/*end phần giới thiệu người sáng lập */
 /* =============== */
 .username {
     padding-left: 0 !important;
