--- a/app/templates/layout/footer.html
+++ b/app/templates/layout/footer.html
@@ -1,6 +1,7 @@
 <div class="bg-light">
     <div class="container">
-        <div class=" p-2 d-flex flex-wrap flex-md-wrap flex-sm-wrap flex-lg-wrap flex-xl-wrap justify-content-between ">
+        <div
+            class=" p-2 d-flex flex-wrap flex-md-wrap flex-sm-wrap flex-lg-wrap flex-xl-wrap justify-content-between ">
             <div>
                 <div class="p-2 m-2">
                     <div class="d-flex flex-column">
@@ -48,20 +49,23 @@
             </div>
         </div>
         <div class="d-flex justify-content-start m-2 align-items-center">
-             <div class="me-5">
-                <img src="https://t-cf.bstatic.com/design-assets/assets/v3.138.1/images-flags/Vn@3x.png"
-                     width="35" class="rounded-circle"/>
+            <div class="me-5">
+                <img
+                    src="https://t-cf.bstatic.com/design-assets/assets/v3.138.1/images-flags/Vn@3x.png"
+                    width="35" class="rounded-circle" />
             </div>
-             <div>
+            <div>
                 <h5>VND</h5>
             </div>
         </div>
 
-        <hr/>
+        <hr />
 
-        <div class="d-flex align-items-center  justify-content-between flex-column p-2 mb-2">
+        <div
+            class="d-flex align-items-center  justify-content-between flex-column p-2 mb-2">
             <div class="text-footer">
-                Oasia là Tập đoàn của Holdings Inc., tập đoàn đứng đầu thế giới về du lịch trực tuyến và các dịch vụ liên quan.
+                Oasia là Tập đoàn của Holdings Inc., tập đoàn đứng đầu thế giới
+                về du lịch trực tuyến và các dịch vụ liên quan.
             </div>
             <div class="text-footer">
                 Bản quyền © 1996 - 2024 Oasia.com™. Bảo lưu mọi quyền.
@@ -69,13 +73,14 @@
         </div>
         <div>
             <div class="d-flex justify-content-around">
-                <i class="fa-solid fa-b booking">  Booking</i>
-                <i class="fa-brands fa-facebook face">  Facebook</i>
-                <i class="fa-brands fa-x-twitter twitter">  Twitter</i>
-                <i class="fa-brands fa-square-instagram instagram">  Instagram</i>
+                <i class="fa-solid fa-b booking"> Booking</i>
+                <i class="fa-brands fa-facebook face"> Facebook</i>
+                <i class="fa-brands fa-x-twitter twitter"> Twitter</i>
+                <i class="fa-brands fa-square-instagram instagram">
+                    Instagram</i>
             </div>
         </div>
 
-
+        <br><br>
     </div>
 </div>
